alignment fixes.

--- a/_sass/morganesque/_portfolio.scss
+++ b/_sass/morganesque/_portfolio.scss
@@ -148,6 +148,7 @@
         width:48px;
         height:48px;
         display:inline-block;
+        vertical-align:middle;
         margin-right:1em;
         border:1px solid #ccc;
         background-size:cover;
